--- a/Orbital/Orbital.vcxproj
+++ b/Orbital/Orbital.vcxproj
@@ -197,6 +197,7 @@ $(QtToolsPath)\windeployqt --release $(OutDir)$(TargetName)$(TargetExt)</Command
     <None Include="scripts\examples\2DPlot_Simple.py" />
     <None Include="scripts\examples\2DPlot_XData.py" />
     <None Include="scripts\examples\Colormap.py" />
+    <None Include="scripts\examples\Colormap_Row.py" />
     <None Include="scripts\ScriptSkeleton.py" />
   </ItemGroup>
   <ItemGroup>
